# doc_to_md

./: .dockerignore  .env.example  .gitignore  API_RESPONSE_CONTRACT.md  AUDIT_REPORT.md  BENCHMARK_SUMMARY.md  DEPLOYMENT.md  Dockerfile  PDF_ENGINE_EVALUATION.md  README.md  README_BENCHMARK.md  REAL_PDF_TESTING.md  WORKLOG_AGENT.md  benchmark.py  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-recommended-pdf.txt  requirements.txt
.github/workflows/: ci.yml
benchmark_results/: README.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/: README.md  report.md  result.json
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/docling/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/local/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/marker/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/markitdown/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/mathpix/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/mineru/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/mistral/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/opendataloader/: output.md
benchmark_results/ait170_ai_bulletin_january_2026_sample/outputs/paddleocr/: output.md
benchmark_results/formula_printed_vs_handwritten_2026_04_06/: README.md  summary.md
benchmark_results/formula_printed_vs_handwritten_2026_04_06/handwritten_formulas_mathpix_sample/: report.md  result.json  reviewed.md
benchmark_results/formula_printed_vs_handwritten_2026_04_06/printed_formulas_regulatory_pdf/: report.md  result.json  reviewed.md
config/: __init__.py  settings.py
examples/: README.md  benchmark_examples.py
final_test/: comparison_report_20260207_125644.md  sample_test.txt
final_validation/: comparison_report_20260207_140440.md  sample_test.txt
readme_cn/: BENCHMARK_SUMMARY_CN.md  EXAMPLES_CN.md  README_BENCHMARK_CN.md
skills/doc-to-md-agent/: SKILL.md
skills/doc-to-md-agent/references/: current-interfaces.md  improvement-plan.md  quality-rubric.md
skills/doc_to_md_agent/: SKILL.md
skills/doc_to_md_agent/references/: current-interfaces.md  improvement-plan.md  quality-rubric.md
src/doc_to_markdown_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/doc_to_md/: __init__.py  api.py  cli.py  formula_reference.py  quality.py
src/doc_to_md/apps/conversion/: cli.py  logic.py  router.py  schemas.py
src/doc_to_md/config/: settings.py
src/doc_to_md/engines/: auto.py  base.py  deepseekocr.py  docling.py  html.py  local.py  marker.py  markitdown.py  mathpix.py  mineru.py  mineru_pro.py  mistral.py  opendataloader.py  paddleocr.py  siliconflow.py
src/doc_to_md/pipeline/: formula_ocr.py  loader.py  postprocessor.py  text_extraction.py  writer.py
src/doc_to_md/utils/: hardware.py  logging.py  tokens.py  validation.py
tests/: test_api.py  test_api_contract.py  test_auto_engine.py  test_benchmark.py  test_cli.py  test_conversion_logic.py  test_engine_readiness.py  test_formula_ocr.py  test_formula_reference.py  test_formula_settings.py  test_html_engine.py  test_mathpix_engine.py  test_mineru_engine.py  test_mistral_engine.py  test_office_extraction.py  test_opendataloader_engine.py  test_pipeline.py  test_postprocessor_entities.py  test_quality.py  test_real_pdf_smoke.py  test_release_metadata.py  test_settings.py  test_text_extraction_enhanced.py  test_tools_run_single_engine_benchmark.py  test_validation.py
tools/: evaluate_markdown_quality.py  generate_smoke_pdf.py  run_single_engine_benchmark.py
(+10 files in other folders)
