[project]
name = "doc-to-markdown-converter"
version = "0.1.0"
description = "Modular CLI for converting documentation to Markdown using multiple engines"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.3",
    "rich==13.7.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "click==8.1.7",
    "pypdf==5.0.1",
    "mistralai==1.9.11",
    "openai==1.58.1",
]

[project.scripts]
doc-to-md = "doc_to_md.cli:app"

[tool.setuptools.package-data]
doc_to_md = ["py.typed"]
