[project]
name = "doc-to-markdown-converter"
version = "0.1.0"
description = "Modular CLI for converting documentation to Markdown using multiple engines"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.5",
    "rich==13.7.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "click==8.1.7",
    "pypdf==5.0.1",
    "mistralai==1.9.11",
    "openai==1.109.1",
    "python-docx==1.1.2",
    "pillow==10.4.0",
    "pytesseract==0.3.13",
    "tiktoken==0.7.0",
]

[project.scripts]
doc-to-md = "doc_to_md.cli:app"

[project.optional-dependencies]
markitdown = ["markitdown>=0.1.3"]
paddleocr = ["paddleocr>=3.3.1", "pypdfium2>=4.30.0"]
mineru = ["mineru>=2.6.4"]
docling = ["docling>=2.61.1"]
marker = ["marker-pdf>=1.10.1"]

[tool.setuptools.package-data]
doc_to_md = ["py.typed"]
